alignment issue

--- a/src/app/(authed)/cursos/cursos.css
+++ b/src/app/(authed)/cursos/cursos.css
@@ -206,6 +206,9 @@
   background-color: var(--bg-blue-main); /* bg-[#042c45] */
   border-radius: 15px; /* rounded-[15px] */
   padding: 20px 30px; /* p-2 */
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 /* ==========================================================================
